# KNF-Validator

./: .gitignore  README.md  pyproject.toml
tests/: test_validator.py
validator/: __init__.py  cli.py  dedup.py  kuid.py  manifest.py  novelty.py  report.py  sanity.py  schema.py  scoring.py
